# DIP-HW02

./: CMakeLists.txt  README.md
src/: BaseProcessor.cpp  BaseProcessor.h  HistogramEqualizator.cpp  HistogramEqualizator.h  common.cpp  common.h  main.cpp
src/pixel_quantizators/: BChannelQuantizator.cpp  BChannelQuantizator.h  GChannelQuantizator.cpp  GChannelQuantizator.h  GrayLevelQuantizator.cpp  GrayLevelQuantizator.h  HChannelQuantizator.cpp  HChannelQuantizator.h  PixelQuantizator.cpp  PixelQuantizator.h  RChannelQuantizator.cpp  RChannelQuantizator.h
